Added Social Thumbnail

--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="title" property="og:title" content="Lord of the Rings Info" />
+    <meta name="author" content="Henriett Horvath" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://i.ibb.co/0ZWC4xP/douglas-bagg-Ksxl4-Ej-Rvu-Y-unsplash.jpg"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="Lord of the Rings information built with The One API"
+    />
+
+    <meta property="og:url" content="https://lotr-info.netlify.app/" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content="website" />
     <link
       type="image/png"
       sizes="96x96"
